--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ a {
 }
                                                         /* HEADER */
                                                         /* NAVBAR */
+header {
+    background-color: var(--border-default);
+}
 .navbar>.container {
     justify-content: space-between !important;
 }
@@ -45,20 +48,38 @@ a {
     color: var(--secondary-color);
     border-radius: 0;
 }
+#main-nav .navbar-nav .nav-link  {
+    text-align: center;
+    color: #8B96A5;
+}
+#main-nav .navbar-nav .nav-link:hover {
+    color: black;
+}
 
 ul {
     list-style-type: none !important;
 }
+select {
+    border-radius: 6px;
+}
+option {
+    background-color: #fff;
+}
+option:checked {
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+}
 
-#navbar-1 {
+
+#seconary-nav {
     border: 1px solid var(--border-default);
 }
 
-#navbar-1 form {
+#seconary-nav #mobile-nav {
     display: none !important;
 }
 .active {
-    font-weight: 600;
+    font-weight: 400;
 }
 
 @media screen and (max-width: 992px) {
@@ -66,12 +87,12 @@ ul {
         display: block;
     }
 
-    #navbar-1 form {
+    #seconary-nav #mobile-nav {
         display: block !important;
         width: 100%;
         color: var(--primary-color) !important;
     }
-     #navbar-1 form button {
+     #seconary-nav #mobile-nav button {
         color: var(--primary-color) !important;
         background-color: var(--border-default);
         margin: 7px 0;
@@ -83,7 +104,7 @@ ul {
                                                              /* MAIN*/
 main {
     background-color: var(--border-default);
-    padding: 20px;
+    padding: 20px 0;
 }
                                                              /* Hero-1 */
 .hero-1 {
@@ -387,23 +408,78 @@ main .select-item.active {
 footer {
     height: max-content;
 }
-.main-footer tr {
+.main-footer .col-9 {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
-
-.main-footer td {
-    color: var(--last-option);
-}
-.main-footer .col-2 {
+.main-footer .footer-options {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: space-around;
+}
+.main-footer .col-9 a {
+    color: var(--last-option);
 }
 .footer-detail {
+    background-color: var(--border-default);
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
+    padding: 10px;
+}
+.footer-detail div, .footer-detail p {
+    padding: 0 100px;
+    color: var(--last-option);
+}
+
+
+                                                        /* PRODUCT */
+.Breadcrumb {
+    display: flex;
+    background-color: var(--border-default);
+}
+.Breadcrumb p {
+    padding: 20px 10px;
+    color: var(--last-option);
+}
+
+.main-content {
+    background-color: var(--secondary-color);
+    height: max-content ;
+    margin: 0 auto;
+}
+.main-content .image-area {
+    width: 100%;
+    height: max-content;
+    border: 2px solid var(--border-default);
+    border-radius: 6px;
+    margin: 20px 0;
+}
+.main-content .image-area img {
+    padding: 50px;
+    width: 100%;
+}
+.main-content .gallery-images {
+    display: flex;
+    justify-content: space-around;
+}
+.gallery-images img {
+    height: 50px;
+    width: 50px;
+    border: 1px solid var(--border-default);
+    border-radius: 6px;
+}
+.supplier-card {
+    height: 325px;
+    border: 2px solid var(--border-default);
+    border-radius: 6px;
+}
+.supplier {
+    display: flex;
+    align-items: center;
+    margin: 20px;
+}
+.supplier img {
+    width: 72px;
+    height: 72px;
 }
