--- a/style.css
+++ b/style.css
@@ -106,6 +106,46 @@ main {
     background-color: #f7fafc;
     padding: 20px 0;
 }
+
+.letter {
+    width: 400px;
+    z-index: 99;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    border: 3px solid var(--primary-color);
+    border-top: 5px solid var(--primary-color);
+    border-bottom: 5px solid var(--primary-color);
+    border-radius: 12px;
+    background-color: var(--secondary-color);
+    padding: 10px 20px;
+    font-weight: 600;
+    animation: fadeUp 0.5s ease;
+}
+.letter span {
+    color: var(--primary-color);
+}
+.letter .btn {
+    float: right;
+    margin-top: 20px;
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+}
+.letter .btn:hover {
+  background: #0f63e6;
+  transform: translateY(-1px);
+}
+@keyframes fadeUp {
+  from {
+    opacity: 0;
+    transform: translateY(12px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
                                                              /* Hero-1 */
 .hero-1 {
     display: flex;
